--- a/dashboard/src/app/components/product/newproduct/newproduct.component.scss
+++ b/dashboard/src/app/components/product/newproduct/newproduct.component.scss
@@ -14,6 +14,9 @@
 .creat i {
   color: black;
 }
+.yllow {
+  color: rgb(139, 139, 46) !important;
+}
 .container {
   // background-color: #1a202c;
   color: white;
