--- a/dashboard/src/app/components/side-nav/side-nav.component.html
+++ b/dashboard/src/app/components/side-nav/side-nav.component.html
@@ -89,10 +89,10 @@
       </a>
     </li>
 
-    <li class="border rounded-pill px-5 mt-5 bg-red">
+    <li class="bg-trans out rounded-pill px-5 mt-5 border-red bg-red">
       <a routerLink="/" class="nav-link" (click)="signOut()">
         <!-- <i class="fa-solid fa-bag-shopping"></i> -->
-        <span class="ms-3 ps-4 ext-white fs-4">Sign Out</span>
+        <span class="ms-3 ps-4 text-red fs-4">Sign Out</span>
       </a>
     </li>
   </ul>
