--- a/dashboard/src/app/components/area-chart/area-chart.component.html
+++ b/dashboard/src/app/components/area-chart/area-chart.component.html
@@ -1,3 +1,3 @@
-<div class="chart-container bg-danger text-white">
+<div class="chart-container bg-yellow text-black">
   <canvas id="MyChart">{{ chart }}</canvas>
 </div>
