--- a/dashboard/src/app/components/area-last-chart/area-last-chart.component.html
+++ b/dashboard/src/app/components/area-last-chart/area-last-chart.component.html
@@ -1,3 +1,3 @@
-<div class="chart-container bg-danger text-black">
+<div class="chart-container bg-yellow text-black">
   <canvas class="text-black" id="lastYearChart">{{ chart }}</canvas>
 </div>
