--- a/dashboard/src/app/components/product/newproduct/newproduct.component.html
+++ b/dashboard/src/app/components/product/newproduct/newproduct.component.html
@@ -9,7 +9,7 @@
     }"
   >
     <h3
-      class="mt-3 all-product mx-auto p-4"
+      class="mt-3 all-product mx-auto p-4 yllow"
       [routerLink]="['/product/product']"
     >
       Add New Product
@@ -146,14 +146,39 @@
         </div>
         <!-- info container -->
         <div
-          class="w-50 d-flex flex-column justify-content-start align-items-center info"
+          class="w-50 flex-column justify-content-start align-items-center info"
         >
+          <div class="mb-3 mt-3">
+            <label class="me-2 text-black">Product image: </label>
+            <input
+              class="form-control text-black border border-warning"
+              type="text"
+              [(ngModel)]="product.thumbnail"
+              name="image"
+              required
+              minlength="4"
+              #productimage="ngModel"
+              [ngClass]="{
+                'is-invalid':
+                  (productName.touched || productName.dirty) &&
+                  productName.invalid
+              }"
+            />
+            <span class="invalid-feedback">
+              <span *ngIf="productName.errors?.['required']"
+                >product name is required
+              </span>
+              <span *ngIf="productName.errors?.['minlength']"
+                >product name must be at least 4 characters
+              </span>
+            </span>
+          </div>
           <!-- name -->
           <div class="w-100 justify-content-around align-items-center title">
             <div class="mb-3 mt-3">
-              <label class="me-2">Product Name: </label>
+              <label class="me-2 text-black">Product Name: </label>
               <input
-                class="form-control"
+                class="form-control text-black border border-warning"
                 type="text"
                 [(ngModel)]="product.title"
                 name="title"
@@ -205,9 +230,9 @@
           <!-- deacription -->
           <div class="w-100 justify-content-around align-items-center desc">
             <div class="mb-3 mt-3">
-              <label class="me-2">description:</label>
+              <label class="me-2 text-black">description:</label>
               <input
-                class="form-control"
+                class="form-control text-black border border-warning"
                 type="text"
                 [(ngModel)]="product.description"
                 name="description"
@@ -260,9 +285,9 @@
           <!-- price&quantity -->
           <div class="w-100 justify-content-around align-items-center price">
             <div class="mt-3 mb-3">
-              <label class="me-2">Price:</label>
+              <label class="me-2 text-black">Price:</label>
               <input
-                class="form-control"
+                class="form-control text-black border border-warning"
                 type="number"
                 [(ngModel)]="product.price"
                 name="price"
@@ -281,9 +306,9 @@
               </span>
             </div>
             <div class="mt-3 mb-3">
-              <label class="me-2">quantity:</label>
+              <label class="me-2 text-black">quantity:</label>
               <input
-                class="form-control"
+                class="form-control text-black border border-warning"
                 type="number"
                 [(ngModel)]="product.quantity"
                 name="quantity"
