--- a/dashboard/src/app/components/product/product/product.component.scss
+++ b/dashboard/src/app/components/product/product/product.component.scss
@@ -58,14 +58,14 @@ i {
   cursor: pointer;
 }
 .Next {
-  background-color: #ff69b43e;
+  background-color: rgba(255, 255, 0, 0.5);
   border: none;
-  color: #ff69b4;
+  color: black;
 }
 .Previous {
-  background-color: #2fe5a843;
+  background-color: gray;
   border: none;
-  color: #2fe5a7;
+  color: white;
 }
 //===========< media query >=======================
 //===========< nav media >==========================
@@ -151,6 +151,7 @@ i {
 
 .ho:hover {
   border: solid 1px rgb(202, 56, 56);
+  color: rgb(202, 56, 56);
 }
 
 // .bg-gr {
