--- a/dashboard/src/app/components/side-nav/side-nav.component.scss
+++ b/dashboard/src/app/components/side-nav/side-nav.component.scss
@@ -30,3 +30,24 @@
 li:hover {
   background-color: rgba(236, 236, 26, 0.4);
 }
+
+.bg-yellow {
+  background-color: rgba(236, 236, 26, 0.4);
+}
+.text-red {
+  color: rgba(240, 10, 0, 0.5);
+}
+.border-red {
+  border: 2px solid rgba(240, 10, 0, 0.5);
+}
+span:hover {
+  color: white;
+}
+.out:hover {
+  color: white;
+  background-color: rgba(240, 10, 0, 0.5);
+  border: none;
+}
+.bg-trans {
+  background-color: transparent;
+}
