--- a/dashboard/src/app/components/order-details/order-details.component.scss
+++ b/dashboard/src/app/components/order-details/order-details.component.scss
@@ -1,14 +1,13 @@
-form{
-    position: relative;
-    
-    button{
-        position: absolute;
-        top: 0;
-        right: 0;
-        transition: all 0.2S ease-in-out;
-        
-    }
-    .btn-success{
-        right: 30px;
-    }
+form {
+  position: relative;
+
+  button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: all 0.2s ease-in-out;
+  }
+  .btn-success {
+    right: 30px;
+  }
 }
