--- a/dashboard/src/app/components/order-card/order-card.component.scss
+++ b/dashboard/src/app/components/order-card/order-card.component.scss
@@ -1,44 +1,57 @@
-.order-card{
-    background-color: #19191A;
-    border-radius: 10px;
-    height: 130px;
-    position: relative;
-    padding: 0;
-    p{
-        width: 100%;
-        text-align: left;   
-        height: 130px;
-        position: relative;
-        margin: 0;
-        line-height: 130px;
-        top: 0;
-        color: #fff;
-        position: relative;
-        padding-left: 5px;
-        i{
-            color: #2FE5A7;
-            margin-inline: 5px;
-        }
-        span{
-            position: absolute;
-            display: block;
-            bottom: -50px;
-            margin-inline: 5px;
+// .order-card {
+//   background-color: rgb(255, 255, 247);
+//   border-radius: 10px;
+//   height: 130px;
+//   position: relative;
+//   padding: 0;
+//   p {
+//     width: 100%;
+//     text-align: left;
+//     height: 130px;
+//     position: relative;
+//     margin: 0;
+//     line-height: 130px;
+//     top: 0;
+//     color: black;
+//     position: relative;
+//     padding-left: 5px;
+//     i {
+//       color: #2fe5a7;
+//       margin-inline: 5px;
+//     }
+//     span {
+//       position: absolute;
+//       display: block;
+//       bottom: -50px;
+//       margin-inline: 5px;
+//     }
+//   }
+//   a {
+//     color: black;
+//     display: block;
+//     height: 40px;
+//     text-align: center;
+//     width: 80%;
+//     margin-inline: auto;
+//     transition: all 0.1s ease-in-out;
+//   }
+// a:hover {
+//   border: 1px solid #fff;
+//   background-color: #fff;
+//   color: #19191a;
+// }
+// }
 
-        }
-    }
-    a{
-        color: #fff;
-        display: block;
-        height: 40px;
-        text-align: center;
-        width: 80%;
-        margin-inline: auto;
-        transition: all 0.1s ease-in-out;
-    }
-    a:hover{
-        border: 1px solid #fff;
-        background-color: #fff;
-        color: #19191A;
-    }
+.position {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.hov {
+  color: gray;
+}
+
+.hov:hover {
+  color: red;
 }
