--- a/dashboard/src/app/pages/orders/orders.component.html
+++ b/dashboard/src/app/pages/orders/orders.component.html
@@ -1,10 +1,10 @@
-<div class="row m-0 p-0 pt-3 justify-content-center align-items-top">
+<div class="row m-0 p-0 pt-3">
   <div class="col-6">
     <h3 class="mt-3 text-light" style="color: #fff">
       <span class="mt-2 badge bg-secondary"> orders</span>
     </h3>
   </div>
-  <div class="col-6 p-3 text-end">
+  <div class="p-3 text-end">
     <!-- <button
       type="button"
       style="
@@ -20,7 +20,7 @@
       Filter
     </button> -->
   </div>
-  <div class="col-12 my-3 p-2" *ngFor="let order of allOrders">
-    <app-order-card [order]="order"></app-order-card>
+  <div class="col-4 my-3 p-2" *ngFor="let order of allOrders; let i = index">
+    <app-order-card [i]="i" [order]="order"></app-order-card>
   </div>
 </div>
